--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^3.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.54.3"
   }
 }
